Modelo de botão na toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <!--TabLayout-->
     <string name="tabWeb">Web</string>
     <string name="tabDatabase">Favorites</string>
+    <string name="addFavorite">Add to Favorite</string>
 </resources>
