Troca do icone de favorito.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="tabWeb">Web</string>
     <string name="tabDatabase">Favorites</string>
     <string name="addFavorite">Add to Favorite</string>
+    <string name="detail">Details</string>
 </resources>
