Inserção da aba de busca, e troca da cor do icone de favoritos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="addFavorite">Add to Favorite</string>
     <string name="removeFavorite">Removed from Favorite</string>
     <string name="tabSearch">Search</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="searchHere">Search the video here!</string>
 </resources>
