--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -10,7 +10,7 @@
 
     <!--DetailFragment-->
     <string name="favorite">adicionar/remover</string>
-    <string name="detail">detalhes</string>
+    <string name="detail">Detalhes</string>
 
     <!--FavoriteFragment-->
     <string name="addFavorite">adicionado aos favoritos</string>
@@ -18,5 +18,5 @@
 
     <string name="networkFail">erro ao conectar, tente mais tarde</string>
 
-    <string name="emptyList">a lista está vazia</string>
+    <string name="emptyList">Oops, a lista está vazia</string>
 </resources>
